# mne-bids-pipeline-runner

./: .gitignore  README.md  setup.cfg
src/: __init__.py  cli.py  config.py  constants.py  download.py  install.py  runner.py  update.py
