[metadata]
name = mne-bids-pipeline
version = attr: src.__version__
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://github.com/hoechenberger/mne-bids-pipeline-runner
author = Richard Höchenberger
author_email = richard.hoechenberger@gmail.com
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    mne_bids_pipeline=src
python_requires = >=3.6
install_requires =
    mne
    mne-bids
    coloredlogs
    tqdm
    pandas
    scikit-learn
    json_tricks
    fire
    questionary
    typing_extensions; python_version < '3.8'

[options.entry_points]
console_scripts =
    mne-bids-pipeline = src.cli:main
